src/objects/MUSW__Receipt__c.object
<CustomObject>
    <description>Payments Collected</description>
    <fields>
        <fullName>Case_Safe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_BillerBusinessDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACH BillerBusinessDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjusted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <description>1966</description>
        <label>Agency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <description>Captures the applicant name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Gateway_Response__c</fullName>
        <description>Response from the Payment Gateway</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Response from the Payment Gateway</inlineHelpText>
        <label>Gateway Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>BGBK__Bill__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_RTN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank RTN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_SEC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank SEC Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Field to capture Batch Number of check</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Authorized__c</fullName>
        <description>Card Authorization</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_PIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cart PIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convenience_Fee__c</fullName>
        <label>Convenience Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_UAT__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DHP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-1656</description>
        <label>DHP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Today_s__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date_Today&apos;s</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective date from US Bank</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Estimated effective date from US Bank</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>MUSW__Fee__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAP_Doc__c</fullName>
        <description>Captures IAP Doc number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IAP Doc#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivate_License_Date__c</fullName>
        <description>US-1656</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactivate License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Date_and_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiation Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intake_Method__c</fullName>
        <label>Intake Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>Validation Room</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JV_Number__c</fullName>
        <description>Captures JV number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>JV Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_digits_of_Credit_Card_or_ACH__c</fullName>
        <description>Last four digits of the credit card number or ACH account number</description>
        <inlineHelpText>Last four digits of the credit card number or ACH account number sent from payment gateway</inlineHelpText>
        <label>Last 4 digits of Credit Card or ACH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>Captures License Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Recon_Typ__c</fullName>
        <description>Lockbox Recon</description>
        <formula>CASE( MUSW__Payment_Method__c , &apos;Lockbox&apos;, &apos;Lockbox Payment&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lockbox Recon Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Available__c</fullName>
        <description>Amount outstanding based on the following formula: (amount tendered) - (amount used) - (amount refunded) - (change amount) - (amount rejected)</description>
        <label>Amount Remaining</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Refunded__c</fullName>
        <description>Total refunded amount related to this receipt.</description>
        <label>Amount Refunded</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Rejected__c</fullName>
        <description>Amount rejected when the payment is voided.</description>
        <inlineHelpText>Amount of money to be made unavailable within the system.</inlineHelpText>
        <label>Amount Rejected</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Tendered__c</fullName>
        <description>Amount tendered during the payment transaction.</description>
        <label>Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Used__c</fullName>
        <description>Total amount that was used for the fee payment and deposit collection.</description>
        <formula>MUSW__Amount_Tendered__c  - MUSW__Amount_Rejected__c - MUSW__Amount_Available__c - MUSW__Change__c - MUSW__Amount_Refunded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Card_Number__c</fullName>
        <description>Deprecated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Card_Type__c</fullName>
        <description>Deprecated.</description>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Change__c</fullName>
        <description>Change amount due.</description>
        <label>Change</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Check_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Check Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT IN USE</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Deposit_Available__c</fullName>
        <formula>MUSW__Deposit_Amount__c - MUSW__Deposit_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Deposit_Used__c</fullName>
        <label>Deposit Used</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>MUSW__Fund__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Iss_Track_No__c</fullName>
        <formula>IF( OR(ISNULL(MUSW__Track_No__c), MUSW__Track_No__c = &quot;&quot;), HYPERLINK(&quot;../&quot;&amp;Id, Name, &quot;_parent&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N600000008s5e&amp;Id=&quot; &amp; Id &amp; &quot;&amp;ic=1&amp;object=MUSW__Receipt__c&amp;type=DEFAULT&amp;year=&quot;&amp; TEXT(YEAR(TODAY()))&amp;&quot;&amp;month=&quot;&amp; TEXT(MONTH(TODAY()))&amp;&quot;&amp;day=&quot;&amp; TEXT(DAY(TODAY())), &quot;(Issue No.)&quot;, &quot;_parent&quot;),HYPERLINK( &quot;../&quot;&amp;Id , MUSW__Track_No__c,&quot;_parent&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iss. Receipt No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__License1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License1__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paid By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Receipts (Paid By)</relationshipLabel>
        <relationshipName>Receipts_Paid_by</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Payment_Gateway_Transaction_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Gateway Transaction Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
                <value>
                    <fullName>Vitalcheck - Counter</fullName>
                </value>
                <value>
                    <fullName>Check/Cashier&apos;s Check</fullName>
                </value>
                <value>
                    <fullName>Money Order</fullName>
                </value>
                <value>
                    <fullName>Inter-agency Payment</fullName>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
                <value>
                    <fullName>Misc - Unknown</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>NCR - cash</fullName>
                </value>
                <value>
                    <fullName>NCR - check</fullName>
                </value>
                <value>
                    <fullName>Reapplied Payment</fullName>
                </value>
                <value>
                    <fullName>Overshort</fullName>
                </value>
                <value>
                    <fullName>Vitalcheck - DHP</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT IN USE</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Planning_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT IN USE</description>
        <label>Planning Application</label>
        <referenceTo>MUSW__Planning_Application__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Receipt_Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Payee</inlineHelpText>
        <label>Receipt Paid By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Receipts Paid</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Full amount has been refunded</inlineHelpText>
        <label>Refunded In Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Status of the receipt</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Track_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Receipt No.</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manual_IAP_JV_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual IAP JV Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MidDay_Date__c</fullName>
        <formula>If(VALUE(MID(TEXT(CreatedDate),12,2)) - 7 &lt; 0, VALUE(MID(TEXT(CreatedDate),12,2)) - 7 + 24, VALUE(MID(TEXT(CreatedDate),12,2)) - 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MidDay_Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payable_Receipt_Record__c</fullName>
        <label>Number of Payable Receipt Record</label>
        <summaryForeignKey>MUSW__Payable_Receipt__c.MUSW__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Payment_Records__c</fullName>
        <label>Number of Payment Records</label>
        <summaryForeignKey>BGBK__Payment__c.BGBK__Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_payment_sources__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of payment sources</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_25_Handling_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-1656</description>
        <label>Override $25 Handling Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overshort_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Captures Overshort amount</description>
        <label>Overshort Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <description>Payee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_First_Name__c</fullName>
        <description>Credit Card/ACH payer first name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Credit Card payer first name from payment gateway</inlineHelpText>
        <label>Payer First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Last_Name__c</fullName>
        <description>Credit Card/ACH payer last name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Credit Card/ACH payer last name from payment gateway</inlineHelpText>
        <label>Payer Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Batch_Id__c</fullName>
        <formula>BGBK__Cart__r.BGBK__BG_Payment_Batch__c</formula>
        <label>Payment Batch Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Batch__c</fullName>
        <formula>BGBK__Cart__r.BGBK__BG_Payment_Batch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Batch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Transaction_Fee__c</fullName>
        <label>Payment Gateway Transaction Fee</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Source_Total__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Source Total</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_amount__c</fullName>
        <label>Payment amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cash</fullName>
                </value>
                <value>
                    <fullName>check</fullName>
                </value>
                <value>
                    <fullName>money order</fullName>
                </value>
                <value>
                    <fullName>voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Polaris_CreatedDate__c</fullName>
        <formula>TODAY() - DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_DHP__c</fullName>
        <description>US-1656</description>
        <label>Reason for DHP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC – Account Closed</fullName>
                </value>
                <value>
                    <fullName>FR – Fraud / Forgery forwarded to LIU</fullName>
                </value>
                <value>
                    <fullName>IV – Invalid account number</fullName>
                </value>
                <value>
                    <fullName>NO – No signature</fullName>
                </value>
                <value>
                    <fullName>NSF – Not sufficient Funds</fullName>
                </value>
                <value>
                    <fullName>PD – Post dated</fullName>
                </value>
                <value>
                    <fullName>RM – Refer to Maker</fullName>
                </value>
                <value>
                    <fullName>SDC – Stale dated</fullName>
                </value>
                <value>
                    <fullName>SP – Stop Payment</fullName>
                </value>
                <value>
                    <fullName>CA- Cancelled (credit card chargeback)</fullName>
                </value>
                <value>
                    <fullName>TS – Two signatures required</fullName>
                </value>
                <value>
                    <fullName>UL – Unable to Locate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remittance_Process_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Remittance Process Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remitter__c</fullName>
        <description>Remitter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Remitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Fees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Selected Fees</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sender_Agency__c</fullName>
        <description>Captures Sender Agency Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Agency #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-1657</description>
        <label>Sent to Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_number__c</fullName>
        <label>Sequence number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionTransferDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SessionTransferDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Settlement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Text__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>System Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Confirmation_ID__c</fullName>
        <description>Transaction confirmation from US Bank</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Confirmation ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USBankpaymentmode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>USBankpaymentmode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Bank_Payment_Status__c</fullName>
        <label>US Bank Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Envelope</label>
        <referenceTo>Customer_Envelope__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VitalCheck_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VitalCheck Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <description>1966</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Voucher #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>Collection_Agency</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Amount_Tendered__c</columns>
        <columns>MUSW__Amount_Rejected__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sent_to_Collections__c</columns>
        <filterScope>Mine</filterScope>
        <label>Collection Agency</label>
    </listViews>
    <listViews>
        <fullName>IAP</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Validation_number__c</columns>
        <columns>Manual_IAP_JV_Created__c</columns>
        <columns>IAP_Doc__c</columns>
        <columns>MUSW__Amount_Tendered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__Payment_Method__c</field>
            <operation>equals</operation>
            <value>Inter-agency Payment</value>
        </filters>
        <filters>
            <field>Manual_IAP_JV_Created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>IAP</label>
    </listViews>
    <listViews>
        <fullName>MUSW__All2</fullName>
        <columns>NAME</columns>
        <columns>Validation_number__c</columns>
        <columns>MUSW__Amount_Tendered__c</columns>
        <columns>Intake_Method__c</columns>
        <columns>MUSW__Payment_Method__c</columns>
        <columns>MUSW__Receipt_Paid_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>MidDay_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>License_Number__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>US_Bank_Payment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Payment_Batch</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Amount_Tendered__c</columns>
        <columns>MUSW__Amount_Available__c</columns>
        <columns>MUSW__Check_Number__c</columns>
        <columns>MUSW__Effective_Date__c</columns>
        <columns>MUSW__Receipt_Paid_By__c</columns>
        <columns>Payment_type__c</columns>
        <columns>MUSW__Deposit_Amount__c</columns>
        <columns>MUSW__Payment_Method__c</columns>
        <columns>Payment_Batch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Batch__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MUSW__Payment_Method__c</field>
            <operation>equals</operation>
            <value>Cash</value>
        </filters>
        <label>Payment Batch</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Intake_Method__c</columns>
        <columns>MUSW__Payment_Method__c</columns>
        <columns>MUSW__Amount_Tendered__c</columns>
        <columns>MUSW__Amount_Available__c</columns>
        <columns>MUSW__Receipt_Paid_By__c</columns>
        <columns>MUSW__Deposit_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Polaris_CreatedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Search (Demo Purposes)</label>
    </listViews>
</CustomObject>